Changed emojis in content-structure.json, Fixed gap in topic-selector

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -45,6 +45,7 @@ main {
     padding: 0.5rem;
     width: 100%;
     cursor: pointer;
+    margin: 0;
 }
 
 .topic-button:hover {
